<resources>
    <!-- General -->
    <string name="app_name">My Wardrobe</string>
    <string name="content_description">Image or Icon</string>

    <!-- Main screen -->
    <string name="main_title_1">Welcome to</string>
    <string name="main_title_2">My Outfit</string>
    <string name="main_button">Start</string>

    <!-- Login screen -->
    <string name="login_title">LOGIN</string>
    <string name="login_button">Login</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_to_signup">Signup for free!</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_error_invalid_credential">Invalid email or password!</string>
    <string name="login_error_general">Error: %s</string>

    <!-- Signup screen -->
    <string name="signup_title">SIGNUP</string>
    <string name="signup_button">Signup</string>
    <string name="signup_have_account">Already have an account?</string>
    <string name="signup_to_login">Login now!</string>
    <string name="signup_successful">Signup Successful!</string>
    <string name="signup_error_email_used">Email already used!</string>
    <string name="signup_error_short_password">Password must consist of 6–15 characters</string>
    <string name="signup_error_invalid_credential">Invalid email or password</string>
    <string name="signup_error_general">Error: %s</string>

    <!-- Email and password -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_empty">Email cannot be empty!</string>
    <string name="password_empty">Password cannot be empty!</string>

    <!-- Navigation bar -->
    <string name="collection">Collection</string>
    <string name="outfit">Outfit</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>

    <!-- Collection Screen -->
    <string name="collection_title">Manage Collection</string>
    <string name="collection_add">Add Collection</string>
    <string name="collection_empty">Empty</string>
    <string name="top">Top\nCollection</string>
    <string name="bottom">Bottom\nCollection</string>
    <string name="shoes">Shoes\nCollection</string>
    <string name="accessories">Accessories\nCollection</string>

    <!-- Outfit Screen -->
    <string name="outfit_title">List Outfit</string>
    <string name="outfit_create">Create Outfit</string>
    <string name="outfit_top">Top</string>
    <string name="outfit_bottom">Bottom</string>
    <string name="outfit_shoes">Shoes</string>
    <string name="outfit_accessories">Accessories</string>
    <string name="outfit_empty">You don\'t have any\noutfit list here.\n\nCreate one by pressing\nthe button below.</string>
    <string name="outfit_empty_collection">Empty collection.\nCreate one first.</string>
    <string name="outfit_name">Outfit name…</string>
    <string name="outfit_name_empty">Outfit name cannot be empty</string>
    <string name="outfit_image_empty">Outfit image cannot be empty</string>
    <string name="outfit_save">Save Outfit</string>
    <string name="outfit_random">Random All</string>
    <string name="outfit_save_success">Outfit saved</string>
    <string name="outfit_save_error">Failed to save outfit</string>

    <!-- Schedule Screen -->
    <string name="schedule_title">Your Schedule</string>
    <string name="schedule_create">Create Schedule</string>
    <string name="schedule_empty">You don\'t have any\nschedule on this date.\n\nCreate one by pressing\nthe button below.</string>
    <string name="schedule_empty_outfit">Empty outfit.\nCreate one first.</string>
    <string name="schedule_name_title">Name</string>
    <string name="schedule_name">Input schedule name…</string>
    <string name="schedule_name_empty">Name cannot be empty</string>
    <string name="schedule_date_title">Date</string>
    <string name="schedule_date">Choose date…</string>
    <string name="schedule_outfit_title">Outfit</string>
    <string name="schedule_outfit">Choose outfit…</string>
    <string name="schedule_outfit_empty">Outfit cannot be empty</string>
    <string name="schedule_outfit_preview_title">Preview</string>
    <string name="schedule_save_success">Schedule saved</string>
    <string name="schedule_save_error">Failed to save schedule</string>

    <!-- Profile Screen -->
    <string name="profile_title">Profile Setting</string>
    <string name="logout">Logout</string>

    <!-- Camera Screen -->
    <string name="camera_failed_to_start">Failed to start camera</string>
    <string name="camera_failed_to_capture">Failed to capture image</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="camera_permission_explained">This app requires camera permission to take pictures. Please grant permission from settings.</string>

    <!-- Camera Edit Screen -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="image_name">Enter image name</string>
    <string name="image_name_empty">Image name cannot be empty</string>
    <string name="upload_image">Uploading image…</string>
    <string name="upload_image_successful">Upload image successful</string>
    <string name="upload_image_error">Upload image error</string>
    <string-array name="collection_types">
        <item>Top</item>
        <item>Bottom</item>
        <item>Shoes</item>
        <item>Accessories</item>
    </string-array>

    <!--    <string name="main_screen">Main Screen</string>-->
    <!--    <string name="login_screen">Login Screen</string>-->
    <!--    <string name="register_screen">Register Screen</string>-->
    <!--    <string name="home_screen">Home Screen</string>-->
    <!--    <string name="camera_screen">Camera Screen</string>-->
    <!--    <string name="collection_screen">Collection Screen</string>-->

    <!--    <string name="email">Email</string>-->
    <!--    <string name="email_user">Email: %s</string>-->
    <!--    <string name="password">Password</string>-->


    <!--    <string name="login">Login</string>-->

    <!--    <string name="register">Register</string>-->

    <!--    <string name="register_error_email_registered">Email already registered</string>-->
    <!--    <string name="register_error_short_password">Password must consist of 6–15 characters</string>-->
    <!--    <string name="register_error_invalid_credential">Invalid email or password</string>-->
    <!--    <string name="register_error_general">Error: %s</string>-->

    <!--    <string name="logout">Logout</string>-->
    <!--    <string name="logout_successful">Logout Successful</string>-->


    <!--    <string name="add_collection">Add Collection</string>-->

    <!--    <string name="close">Close</string>-->

    <!--    <string name="judul_rekomendasi">REKOMENDASI\nOUTFIT</string>-->
    <!--    <string name="top">Top</string>-->
    <!--    <string name="bottoms">Bottoms</string>-->
    <!--    <string name="accessories">Accessories</string>-->
    <!--    <string name="shoes">Shoes</string>-->
    <!--    <string name="random_all">Random All</string>-->
    <!--    <string name="submit">Submit</string>-->

    <!--    <string name="schedule_title">Penjadwalan Outfit</string>-->
    <!--    <string name="schedule_head">Buat dan rencanakan outit yang akan kamu gunakan sesuai dengan jadwalmu</string>-->
    <!--    <string name="schedule_date">Sabtu, 7 Januari 2024</string>-->

    <!--    <string name="fab_add_outfit">Tambah pakaian</string>-->
    <!--    <string name="time">9:30</string>-->
    <!--    <string name="collection_title">Koleksi Outfit</string>-->
    <!--    <string name="top_label">Top</string>-->
    <!--    <string name="bottoms_label">Bottoms</string>-->
    <!--    <string name="accessories_label">Accessories</string>-->

    <!--    <string name="judul_jadwalkan_outfit">Jadwalkan Outfit</string>-->
    <!--    <string name="back_button_desc">Back Button</string>-->
    <!--    <string name="save">Save</string>-->

</resources>