<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".ui.activity.CreateScheduleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/back_arrow_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/hedvig_letters_serif"
                android:gravity="center"
                android:text="@string/schedule_create"
                android:textSize="26sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="40dp"
            android:text="@string/schedule_name_title"
            android:fontFamily="@font/hedvig_letters_serif"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:background="@drawable/button_shape"
            android:hint="@string/schedule_name"
            android:fontFamily="@font/hedvig_letters_serif"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTitle" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/schedule_date_title"
            android:fontFamily="@font/hedvig_letters_serif"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameInput" />

        <TextView
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:gravity="center_vertical"
            android:paddingHorizontal="18dp"
            android:fontFamily="@font/hedvig_letters_serif"
            android:text="@string/schedule_date"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTitle" />

        <TextView
            android:id="@+id/outfitTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/schedule_outfit_title"
            android:fontFamily="@font/hedvig_letters_serif"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateInput" />

        <TextView
            android:id="@+id/outfitInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:gravity="center_vertical"
            android:paddingHorizontal="18dp"
            android:fontFamily="@font/hedvig_letters_serif"
            android:text="@string/schedule_outfit"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outfitTitle" />

        <TextView
            android:id="@+id/outfitPreviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/schedule_outfit_preview_title"
            android:fontFamily="@font/hedvig_letters_serif"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outfitInput" />

        <LinearLayout
            android:id="@+id/outfitLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outfitPreviewTitle">

            <ImageView
                android:id="@+id/topImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/bottomImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/shoesImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/accessoriesImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="175dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/light_pink"
            android:fontFamily="@font/hedvig_letters_serif"
            android:padding="10dp"
            android:text="@string/outfit_save"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outfitLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>